--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,10 @@
 
 </div>
 {% if image != None:%}
+<h4>Hit Button and I will try to figure out whether this is dog or cat!</h4>
+<h4 id="classification"></h4>
 <div>
-    <h3>So, now let's do some operations with this Image!</h3>
-    <ul class="list-group">
-        <li class="list-group-item"><a href="/processing">Click here to see Image processing techniques</a></li>
-    </ul>
+    <button class="btn btn-primary processing" data-url="classification" data-id="5">Find out!</button></li>
 </div>
 {% endif %}
 {% endblock%}
