--- a/templates/layouts/basic.html
+++ b/templates/layouts/basic.html
@@ -17,16 +17,25 @@
     <aside class="drawer pt-4">
         <ul class="drawer__list">
             <li class="drawer__list-item">
-                Upload the Image
+                <a href="/">Home</a>
             </li>
             <li class="drawer__list-item">
-                Image processing
+                <a href="/processing">Image processing techniques</a>
             </li>
             <li class="drawer__list-item">
-                Edge detection
+                <a href="/blur">Blurring techniques</a>
             </li>
             <li class="drawer__list-item">
-                fourth
+                <a href="/colors">Color conversion</a>
+            </li>
+            <li class="drawer__list-item">
+                <a href="/resize">Resize the image</a>
+            </li>
+            <li class="drawer__list-item">
+                <a href="/tutorial">Tutorial</a>
+            </li>
+            <li class="drawer__list-item">
+                <a href="/classification">Image classification</a>
             </li>
         </ul>
     </aside>
