--- a/templates/processing.html
+++ b/templates/processing.html
@@ -23,7 +23,8 @@
             {% for item in items: %}
 
             <div class="card w-100">
-                <button class="btn btn-primary processing" data-id="{{item.id}}">{{item.title}}</button>
+                <button class="btn btn-primary processing" data-url="processing"
+                    data-id="{{item.id}}">{{item.title}}</button>
             </div>
 
             {% endfor %}
