--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,17 +1,65 @@
 :root {
     --width: 200px;
-    --accent: #75345a;
+    --accent: #344375;
 }
 
 body {
     padding: 0;
     margin: 0;
     padding-bottom: 20px;
+    font-size: 16px;
+    min-height: 100vh;
+    background-image: url('/static/bg/bg.png');
+    background-position: bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+
+
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #4d4c4c
+}
+
+.logo {
+    width: 100px;
+    height: 100px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    background: white;
+    border-radius: 50%;
+    padding: 15px;
+    transition: background .5s ease
+}
+
+.logo:hover {
+    background: #e0e0e0;
+}
+
+.logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 ul {
     list-style-type: none;
     padding: 0;
+}
+
+li a {
+    transition: 0.25s ease color
+}
+
+li:hover a {
+    color: #c2c2eb;
+    text-decoration: none;
 }
 
 img {
@@ -39,7 +87,8 @@ img {
 
 .drawer__list-item a {
     color: white;
-    padding: 5px 10px;
+    margin: 5px 0;
+    padding: 5px 20px;
     display: block;
     text-align: left;
 
@@ -69,4 +118,18 @@ img {
 
 h4 span {
     color: red
+}
+
+.dashed {
+    border-radius: 5px;
+    border: dashed 1px #e0e0e0;
+    box-shadow: 0 5px 5px #00000036
+}
+
+.bg-white {
+    background: white;
+}
+
+button.btn-primary {
+    background-color: var(--accent)
 }
