--- a/templates/blur.html
+++ b/templates/blur.html
@@ -4,7 +4,6 @@
 {% block content %}
 <div class="row">
     <div class="col-sm-12">
-
         <h4>Choose any Blurring technique</h4>
         <p>{{error}}</p>
     </div>
@@ -12,7 +11,19 @@
 <div class="row">
     <div class="col-sm-6">
         <div id="image"></div>
+        <div id="explanation" class="mt-4">
+            {% for item in items: %}
+            <div>
+                <h4>Code:</h4>
+                <img src="{{ url_for('static', filename='code/') }}{{item.path}}" alt="code">
+                <hr />
+                <h4>Explanation</h4>
+                <p>{{item.explanation}}</p>
+            </div>
+            {% endfor %}
+        </div>
     </div>
+
     <div class="col-sm-6">
 
         <div class="w-100">
