--- a/templates/layouts/basic.html
+++ b/templates/layouts/basic.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='bg/logo.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-grid.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
@@ -53,6 +54,7 @@
             </div>
         </div>
     </div>
+    {%block scripts%}{%endblock%}
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
 
